--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,6 @@
+image:
+  file: .devcontainer/gitpod.Dockerfile
+
 tasks:
   - init: terraform init
     command: 'echo "TODO: Replace with command to start project"'
